--- a/index.html
+++ b/index.html
@@ -167,61 +167,77 @@
 
                 <div id="tab1" class="works_item_area">
 
-                    <div class="works_item_container">
-                        <div id="p16" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_1" src="image/p16s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>永豐保險代理</span></div>
-                        </div>
-                    </div>
 
                     <div class="works_item_container">
-                        <div id="p17" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_2" src="image/p17s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>泰安產物保險</span></div>
-                        </div>
-                    </div>
-
-                    <div class="works_item_container">
-                        <div id="p9" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_3" src="image/p9s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>Beats官網設計</span></div>
-                        </div>
-                    </div>
-
-                    <div class="works_item_container">
-                        <div id="p12" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_4" src="image/p12s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>Suzuki產品官網設計</span></div>
-                        </div>
-                    </div>
-
-                    <div class="works_item_container">
-                        <a href="website/tutor_web/index.html" target="_blank" role="button">
+                        <a href="https://www.figma.com/file/eAMUmaOZsZQUqmqTKaS2a3/%E6%B0%B8%E8%B1%90%E7%B6%B2%E6%8A%95%E9%A0%81%E9%9D%A2?type=design&node-id=1556%3A1126&t=VoDJYVODg6cgajqb-1" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t1_5" src="image/p11s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t1_1" src="image/p16s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>好師到官網(RWD)</span></div>
+                                <div class="works_item_bar">
+                                    <span>永豐網路投保-網站專案</span><br />
+                                    <span style="font-size:14px;">(外連figma空間)</span>
+                                </div>
                             </div>
                         </a>
                     </div>
 
                     <div class="works_item_container">
-                        <div id="p7" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_6" src="image/p7s.jpg" alt="" />
+                        <div id="p17" class="works_item item_show_pic_2" role="button">
+                            <div class="works_item_pic"><img id="t1_2" src="image/p17s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>建築公司官網設計</span></div>
+                            <div class="works_item_bar"><span>泰安產物官網-視覺改版主導</span></div>
                         </div>
                     </div>
+
+                    <div class="works_item_container">
+                        <a href="website/yuanta_cfd/index.html" target="_blank" role="button">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t1_3" src="image/w10s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar">
+                                    <span>元大期貨官網提案(得標)</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="works_item_container">
+                        <a href="website/yuanta_cfd/index_2.html" target="_blank" role="button">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t1_4" src="image/w11s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar">
+                                    <span>元大期貨官網提案(得標)</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="works_item_container">
+                        <div id="p12" class="works_item item_show_pic" role="button">
+                            <div class="works_item_pic"><img id="t1_5" src="image/p12s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>Suzuki產品官網設計提案</span></div>
+                        </div>
+                    </div>
+
+                    <div class="works_item_container">
+                        <a href="website/home-teacher191031/index.html" target="_blank" role="button">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t1_6" src="image/w5s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar"><span>家教派遣平台-風格嘗試練習</span></div>
+                            </div>
+                        </a>
+                    </div>
+
+
 
                 </div>
 
@@ -241,13 +257,31 @@
                                 <div class="works_item_pic"><img id="t2_2" src="image/w8s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>一頁式廣告頁(RWD)</span></div>
+                                <div class="works_item_bar">
+                                    <span>一頁式宣傳網頁</span>
+                                    <br />
+                                    <span style="font-size:14px;">(含RWD切版)</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="works_item_container">
-                        <div id="p4" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t2_3" src="image/p4s.jpg" alt="" />
+                        <a href="website/taian_annual/index.html" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t2_3" src="image/w9s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar">
+                                    <span>泰安產物活動網頁</span>
+                                    <br />
+                                    <span style="font-size:14px;">(含RWD切版)</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="works_item_container">
+                        <div id="p3" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t2_4" src="image/p3s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>產品推廣網頁</span></div>
@@ -256,28 +290,16 @@
 
                     <div class="works_item_container">
                         <div id="p1" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t2_4" src="image/p1s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t2_5" src="image/p1s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>3折DM</span></div>
                         </div>
                     </div>
-                    <div class="works_item_container">
-                        <div id="p2" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t2_5" src="image/p2s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>海報設計</span></div>
-                        </div>
-                    </div>
-                    <div class="works_item_container">
-                        <div id="p18" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t2_6" src="image/p18s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>一頁式廣告</span></div>
-                        </div>
-                    </div>
+
+
+
+
                 </div>
 
                 <div id="tab3" class="works_item_area">
@@ -322,7 +344,7 @@
                             <div class="works_item_bar"><span>貓頭鷹-角色設計</span></div>
                         </div>
                     </div>
-                    <div class="works_item_container">
+                    <div class="works_item_container" style="display:none;">
                         <div id="s12" class="works_item item_show_pic">
                             <div class="works_item_pic"><img id="t3_6" src="image/s12s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
@@ -330,22 +352,25 @@
                             <div class="works_item_bar"><span>插畫製作</span></div>
                         </div>
                     </div>
-                    <div class="works_item_container">
-                        <div id="s5" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t3_7" src="image/s5s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>小雞繪圖</span></div>
-                        </div>
-                    </div>
+
 
                 </div>
 
                 <div id="tab4" class="works_item_area">
                     <div class="works_item_container">
+                        <a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=279%3A413&t=lHXyHHqyTi5KfWwP-1" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t4_1" src="image/a5s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar"><span>國泰世華銀行APP redesign</span></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="works_item_container">
                         <a href="website/funtogo2021/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t4_1" src="image/a2s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t4_2" src="image/a2s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>社群APP設計(android)</span></div>
@@ -355,7 +380,7 @@
                     <div class="works_item_container">
                         <a href="website/sunairline/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t4_2" src="image/a3s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t4_3" src="image/a3s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>機票訂購APP設計(ios)</span></div>
@@ -363,29 +388,21 @@
                         </a>
                     </div>
                     <div class="works_item_container">
-                        <a href="website/home-teacher191031/index.html" target="_blank">
+                        <a href="website/money_mine/page_ux.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t4_3" src="image/w5s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t4_4" src="image/a1s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>教師派遣平台</span></div>
+                                <div class="works_item_bar"><span>股票投資APP設計</span></div>
                             </div>
                         </a>
                     </div>
                     <div class="works_item_container">
-                        <div id="y1" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t4_4" src="image/y1s.jpg" alt="" />
+                        <div id="y1" class="works_item item_show_pic_3">
+                            <div class="works_item_pic"><img id="t4_5" src="image/y1s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>台新風險管理系統</span></div>
-                        </div>
-                    </div>
-                    <div class="works_item_container">
-                        <div id="y2" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t4_5" src="image/y2s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>永豐保代管理系統</span></div>
+                            <div class="works_item_bar"><span>後台系統提案</span></div>
                         </div>
                     </div>
                 </div>
@@ -416,6 +433,32 @@
         </div>
         <img src="image/close_icon.png" class="pup_close_icon" alt="" />
     </div>
+
+    <div class="pup_container_2" style="display:none;">
+        <div class="pup_bg"></div>
+        <div class="pup_img_container">
+            <img src="work_image/p17-1.png" alt="" />
+            <img src="work_image/p17-2.png" alt="" />
+            <img src="work_image/p17-3.png" alt="" />
+            <img src="work_image/p17-4.png" alt="" />
+            <img src="work_image/p17-5.png" alt="" />
+            <img src="work_image/p17-6.png" alt="" />
+            <img src="work_image/p17-7.png" alt="" />
+            <img src="work_image/p17-8.png" alt="" />
+            <img src="work_image/p17-9.png" alt="" />
+        </div>
+        <img src="image/close_icon.png" class="pup_close_icon" alt="" />
+    </div>
+    <div class="pup_container_3" style="display:none;">
+        <div class="pup_bg"></div>
+        <div class="pup_img_container">
+            <img src="work_image/y1-1.png" alt="" />
+            <img src="work_image/y1-2.png" alt="" />
+            <img src="work_image/y1-3.png" alt="" />
+            <img src="work_image/y1-4.png" alt="" />
+        </div>
+        <img src="image/close_icon.png" class="pup_close_icon" alt="" />
+    </div>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T99CDB2" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
@@ -432,7 +475,24 @@
     });
 
 </script>
+<script>
+    $('.item_show_pic_2').click(function() {
+        $('.pup_container_2').fadeIn(500);
+    });
+    $('.pup_close_icon,.pup_bg').click(function() {
+        $('.pup_container_2').fadeOut(500);
+    });
 
+</script>
+<script>
+    $('.item_show_pic_3').click(function() {
+        $('.pup_container_3').fadeIn(500);
+    });
+    $('.pup_close_icon,.pup_bg').click(function() {
+        $('.pup_container_3').fadeOut(500);
+    });
+
+</script>
 <script>
     if ($(window).width() <= 900) {
         $('.intor_pic').css('height', $('.intor_text_area').height());
