--- a/index.html
+++ b/index.html
@@ -180,16 +180,6 @@
                             </div>
                         </a>
                     </div>
-
-                    <div class="works_item_container">
-                        <div id="p17" class="works_item item_show_pic_2" role="button">
-                            <div class="works_item_pic"><img id="t1_2" src="image/p17s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>泰安產物官網-視覺改版</span></div>
-                        </div>
-                    </div>
-
                     <div class="works_item_container">
                         <a href="website/yuanta_cfd/index.html" target="_blank" role="button">
                             <div class="works_item">
@@ -215,6 +205,14 @@
                             </div>
                         </a>
                     </div>
+                    <div class="works_item_container">
+                        <div id="p17" class="works_item item_show_pic_2" role="button">
+                            <div class="works_item_pic"><img id="t1_2" src="image/p17s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>泰安產物官網-視覺改版</span></div>
+                        </div>
+                    </div>
 
                     <div class="works_item_container">
                         <div id="p12" class="works_item item_show_pic" role="button">
@@ -231,7 +229,7 @@
                                 <div class="works_item_pic"><img id="t1_6" src="image/w5s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>家教派遣平台-風格嘗試練習</span></div>
+                                <div class="works_item_bar"><span>家教派遣平台-風格嘗試</span></div>
                             </div>
                         </a>
                     </div>
@@ -271,7 +269,7 @@
                             <div class="works_item_pic"><img id="t2_1" src="image/p6s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>網路活動視覺</span></div>
+                            <div class="works_item_bar"><span>網路活動提案</span></div>
                         </div>
                     </div>
                     <div class="works_item_container">
@@ -329,12 +327,12 @@
                         </a>
                     </div>
                     <div class="works_item_container">
-                        <a href="website/money_mine/page_ux.html" target="_blank">
+                        <a href="website/money_mine_page/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t4_4" src="image/a1s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t4_4" src="image/a1-2s.png" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>股票APP設計 UX展示</span></div>
+                                <div class="works_item_bar"><span>股票APP設計UIUX展示</span></div>
                             </div>
                         </a>
                     </div>
