--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <div class="top_bar_area">
         <div class="top_bar_container">
-            <div class="top_bar_text top_bar_left"><i class="fa fa-heart"></i>您好，歡迎您的拜訪:)</div>
+            <div class="top_bar_text top_bar_left"><i class="fa fa-heart"></i>歡迎您的拜訪:)</div>
             <div class="top_bar_logo"><img src="image/logo.jpg" alt="joe's works" /></div>
             <div class="top_bar_text top_bar_right"><i class="fa fa-desktop"></i><i class="fa fa-tablet"></i>網頁為響應式建置</div>
         </div>
@@ -123,20 +123,20 @@
             <div class="intor_text_container_1 intor_text_dis_1">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">&frasl;</span>10<span class="intor_symbol_1">&frasl;</span>15，銘傳數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，目前在始祖鳥科技任職UIUX設計師，至今<span>已有九年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。<br />
-                    使用<span>Photoshop、Adobe Xd、Figma、illustrator</span>製作網頁、各類型介面之視覺設計；
+                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，目前在始祖鳥科技任職UIUX設計師，至今<span>已有9~10年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。<br />
+                    使用<span>Photoshop、Figma、illustrator</span>製作網頁、各類型介面之視覺設計；
                 </div>
             </div>
             <div class="intor_text_container_1 intor_text_dis_2" style="padding-top:0px;">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">.</span>10<span class="intor_symbol_1">.</span>15<br />銘傳大學數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，目前在始祖鳥科技任職UIUX設計師，至今<span>已有九年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。
+                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，目前在始祖鳥科技任職UIUX設計師，至今<span>已有9~10年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。
                 </div>
             </div>
             <div class="intor_text_container_2 intor_text_dis_1">
                 <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
                 <div class="intor_text" style="word-break:break-all">
-                    網頁建置能依<span>Boostrap概念為基礎並能運用Html5.CSS3.Jquery建置RWD網頁並搭配SCSS</span>增加改版、維護之效率；行動裝置APP能利用<span>IOS、Google設計規範</span>為基礎設計介面，了解使用者體驗相關知識；<span>懂使用Google Analytics、Google tag manager</span>蒐集使用者資料。
+                    能依Boostrap概念為基礎並能<span>運用Html5.CSS3.Jquery建置RWD網頁並搭配SCSS</span>增加改版、維護之效率；行動裝置<span>APP能利用IOS、Google設計規範設計介面；了解使用者體驗相關知識，規劃數位產品使用流程</span>；懂使用Google Analytics、Google tag manager蒐集使用者資料。
                 </div>
             </div>
         </div>
@@ -145,7 +145,7 @@
             <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
             <div class="intor_text" style="word-break:break-all">
                 使用<span>Photoshop、illustrator、Figma</span>製作網頁、各類型介面之視覺設計；
-                網頁建置能依<span>Boostrap概念為基礎並能運用Html5.CSS3.Jquery建置RWD網頁並搭配SCSS</span>增加改版、維護之效率；行動裝置APP能利用<span>IOS、Google設計規範</span>為基礎設計介面，了解使用者體驗相關知識；<span>懂使用Google Analytics、Google tag manager</span>蒐集使用者資料。
+                能依Boostrap概念為基礎並<span>能運用Html5.CSS3.Jquery建置RWD網頁並搭配SCSS</span>增加改版、維護之效率；行動裝置<span>APP能利用IOS、Google設計規範設計介面；了解使用者體驗相關知識，規劃數位產品使用流程</span>；懂使用Google Analytics、Google tag manager蒐集使用者資料。
             </div>
         </div>
 
@@ -171,10 +171,11 @@
                             <div class="works_item">
                                 <div class="works_item_pic"><img id="t1_1" src="image/p16s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>永豐網路投保-網站專案</span>
-                                    <span style="font-size:14px;">(figma)</span><br />
+                                    <span>永豐網路投保</span>
+                                    <span style="font-size:14px;color:#ffd452;">(外連figma)</span><br />
                                     <span style="font-size:14px;">UI library、RWD mockup、Prototype</span>
                                 </div>
                             </div>
@@ -183,8 +184,9 @@
                     <div class="works_item_container">
                         <a href="website/yuanta_cfd/index.html" target="_blank" role="button">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t1_3" src="image/w10s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t1_2" src="image/w10s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
                                     <span>元大期貨官網提案(得標)</span>
@@ -196,7 +198,7 @@
                     <div class="works_item_container">
                         <a href="website/yuanta_cfd/index_2.html" target="_blank" role="button">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t1_4" src="image/w11s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t1_3" src="image/w11s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar">
@@ -207,7 +209,7 @@
                     </div>
                     <div class="works_item_container">
                         <div id="p17" class="works_item item_show_pic_2" role="button">
-                            <div class="works_item_pic"><img id="t1_2" src="image/p17s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t1_4" src="image/p17s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>泰安產物官網-視覺改版</span></div>
@@ -239,8 +241,9 @@
                     <div class="works_item_container">
                         <a href="website/travel_activity/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t2_3" src="image/w12s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t2_1" src="image/w12s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
                                     <span>泰安產物活動網頁</span>
@@ -255,6 +258,7 @@
                             <div class="works_item">
                                 <div class="works_item_pic"><img id="t2_2" src="image/w8s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
                                     <span>一頁式宣傳網頁</span>
@@ -266,7 +270,7 @@
                     </div>
                     <div class="works_item_container">
                         <div id="p6" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t2_1" src="image/p6s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t2_3" src="image/p6s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>網路活動提案</span></div>
@@ -297,20 +301,41 @@
                             <div class="works_item">
                                 <div class="works_item_pic"><img id="t4_1" src="image/a5s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>國泰世華銀行APP redesign</span>
-                                    <span style="font-size:14px;">(figma)</span><br />
+                                    <span>銀行APP redesign</span>
+                                    <span style="font-size:14px;color:#ffd452;">(外連figma)</span><br />
                                     <span style="font-size:14px;">Persona、User story、Functional Map、Flow Chart...</span>
                                 </div>
                             </div>
                         </a>
                     </div>
                     <div class="works_item_container">
+                        <div id="" class="works_item item_show_pic_4">
+                            <div class="works_item_pic"><img id="t4_2" src="image/a5s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>APP物件動態模擬</span></div>
+                        </div>
+                    </div>
+                    <div class="works_item_container">
+                        <a href="website/money_mine_page/page.html" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t4_3" src="image/a1-2s.png" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
+                                </div>
+                                <div class="works_item_bar"><span>股票APP設計UIUX展示</span></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="works_item_container">
                         <a href="website/funtogo2021/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t4_2" src="image/a2s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t4_4" src="image/a2s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                    <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar"><span>社群APP設計 android</span></div>
                             </div>
@@ -319,26 +344,17 @@
                     <div class="works_item_container">
                         <a href="website/sunairline/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t4_3" src="image/a3s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t4_5" src="image/a3s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>機票訂購APP設計 ios</span></div>
                             </div>
                         </a>
                     </div>
-                    <div class="works_item_container">
-                        <a href="website/money_mine_page/page.html" target="_blank">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="t4_4" src="image/a1-2s.png" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                </div>
-                                <div class="works_item_bar"><span>股票APP設計UIUX展示</span></div>
-                            </div>
-                        </a>
-                    </div>
+
                     <div class="works_item_container">
                         <div id="y1" class="works_item item_show_pic_3">
-                            <div class="works_item_pic"><img id="t4_5" src="image/y1s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t4_6" src="image/y1s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>後台系統提案</span></div>
@@ -454,6 +470,13 @@
         </div>
         <img src="image/close_icon.png" class="pup_close_icon" alt="" />
     </div>
+    <div class="pup_container_4" style="display:none;">
+        <div class="pup_bg"></div>
+        <div class="pup_img_container">
+            <img src="work_image/g1.gif" alt="" />
+        </div>
+        <img src="image/close_icon.png" class="pup_close_icon" alt="" />
+    </div>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T99CDB2" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
@@ -468,7 +491,6 @@
     $('.pup_close_icon,.pup_bg').click(function() {
         $('.pup_container').fadeOut(500);
     });
-
 </script>
 <script>
     $('.item_show_pic_2').click(function() {
@@ -477,7 +499,6 @@
     $('.pup_close_icon,.pup_bg').click(function() {
         $('.pup_container_2').fadeOut(500);
     });
-
 </script>
 <script>
     $('.item_show_pic_3').click(function() {
@@ -486,7 +507,14 @@
     $('.pup_close_icon,.pup_bg').click(function() {
         $('.pup_container_3').fadeOut(500);
     });
-
+</script>
+<script>
+    $('.item_show_pic_4').click(function() {
+        $('.pup_container_4').fadeIn(500);
+    });
+    $('.pup_close_icon,.pup_bg').click(function() {
+        $('.pup_container_4').fadeOut(500);
+    });
 </script>
 <script>
     if ($(window).width() <= 900) {
